[package]
name = "dls"
version = "0.0.1"
edition = "2021"
description = "Dependency list"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast-grep-core = "0.5.6"
ast-grep-language = "0.5.6"
clap = { version = "4.3.0", features = ["derive"] }
